First version for a new way to drag and drop in wiringEditor miniwidgets, to avoid overlapping of elements when menubar has scroll

--- a/src/defaulttheme/static/css/wiring_editor.css
+++ b/src/defaulttheme/static/css/wiring_editor.css
@@ -4,7 +4,6 @@
     left: 0px;
     right: 0px;
     bottom: 0px;
-    /*pointer-events: none;*/
     width: 100%;
     height: 100%;
     box-shadow: inset 0 0 10px #000000;
@@ -22,6 +21,8 @@
     font-size: 0.6em;
     width: 180px;
     vertical-align: middle;
+    overflow-x: visible;
+    overflow-y: auto;
 }
 
 .wiring_editor .grid {
@@ -109,7 +110,6 @@
     margin: 1em 1em;
     vertical-align: middle;
     z-index: 10;
-    line-height: 1.5em;
 }
 
 .wiring_editor .targets {
@@ -124,6 +124,13 @@
     text-align: right;
     padding-left: 1em;
     padding-right: 1em;
+}
+
+/* clone mini widget for drag and drop */
+.wiring_editor .border_layout .ioperator.clone, .wiring_editor .border_layout .igadget.clone {
+    position: absolute;
+    font-size: 0.6em;
+    z-index: 20;
 }
 
 /* SELECTED OBJECTS 
